sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/CCP_Workorder_Validation__mdt.object-meta.xml
<CustomObject>
    <label>CCP Workorder Validation</label>
    <pluralLabel>CCP Workorder Validation</pluralLabel>
</CustomObject>