sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>