sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <label>Condition_Field__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>