sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <label>Condition_Value__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>