sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/isBusinessAccount__c.field-meta.xml
<CustomField>
    <fullName>isBusinessAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBusinessAccount</label>
    <type>Checkbox</type>
</CustomField>