sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/isDrivePackage__c.field-meta.xml
<CustomField>
    <fullName>isDrivePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDrivePackage</label>
    <type>Checkbox</type>
</CustomField>