sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/isProcessingExistingAccounts__c.field-meta.xml
<CustomField>
    <fullName>isProcessingExistingAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProcessingExistingAccounts</label>
    <type>Checkbox</type>
</CustomField>