sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>