sfdx-source/force-app/main/default/objects/CCP_Workorder_Validation__mdt/listViews/ValidationDetails.listView-meta.xml
<ListView>
    <fullName>ValidationDetails</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Name__c</columns>
    <columns>isBusinessAccount__c</columns>
    <columns>isDrivePackage__c</columns>
    <columns>isProcessingExistingAccounts__c</columns>
    <columns>Package_Name__c</columns>
    <columns>Work_Order_SubType__c</columns>
    <columns>Work_Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>ValidationDetails</label>
</ListView>